--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,7 @@
 @main("Welcome to Play") {
 
   <div class="api-box">
-    <h1>Duenna API</h1>
+    <h1>Cask API</h1>
     <div><span>see <a href="/docs">swagger</a> docs</span>
     </div>
     <div>This is the Api for the project</div>
