--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,12 @@
 @()
 
 @main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+
+  <div class="api-box">
+    <h1>Duenna API</h1>
+    <div><span>see <a href="/docs">swagger</a> docs</span>
+    </div>
+    <div>This is the Api for the project</div>
+  </div>
+
 }
