--- a/app/views/email/emailWrapper.scala.html
+++ b/app/views/email/emailWrapper.scala.html
@@ -13,7 +13,7 @@
             background-color: #2b2b2b;
             color: #cfcfd0 ;
             font-family: Arial;">
-            <p>Hello <b>@{user.user.displayUser.username}</b>
+            <p>Hello <b>@{user.user.public.username}</b>
             @content
         </div>
     </body>
