--- a/app/views/email/template_passwordReset.scala.html
+++ b/app/views/email/template_passwordReset.scala.html
@@ -1,14 +1,14 @@
 @import com.cask.models.user.ServerUser
 
 @import java.net.URLEncoder
-@(user: ServerUser, serverUrl: String)
+@(serverUser: ServerUser, serverUrl: String)
 
-@emailWrapper(user,serverUrl) {
+@emailWrapper(serverUser,serverUrl) {
 
 <p>We have received a request to reset your password<br>
 you can use the link in this email</p>
 <p>click
-    <a style="color: #a10000;text-decoration: none;" href="@{serverUrl}/reset/action?id=@{URLEncoder.encode(user.user.displayUser.id.getOrElse(0).toString)}&code=@{URLEncoder.encode(user.passwordResetCode.get)}"><b>Here</b></a>
+    <a style="color: #a10000;text-decoration: none;" href="@{serverUrl}/reset/action?id=@{URLEncoder.encode(serverUser.user.public.id.getOrElse(0).toString)}&code=@{URLEncoder.encode(serverUser.passwordResetCode.get)}"><b>Here</b></a>
  to change your password.
 </p>
 <p>If this was not you, you can safely ignore this email as your password has not been changed</p>
