--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,11 +2,19 @@
 
 @main("Welcome to Play") {
 
-  <div class="api-box">
-    <h1>Cask API</h1>
-    <div><span>see <a href="/docs">swagger</a> docs</span>
-    </div>
-    <div>This is the Api for the project</div>
-  </div>
+  <div class="center-block">
 
+
+    <div class="d-flex flex-column align-items-center">
+      <img src="@routes.Assets.versioned("images/logo.svg")">
+      <h1>Cask API</h1>
+      <div>
+        <span>see <a href="/docs">swagger</a> docs</span>
+      </div>
+      <div class="subtext">This is the Api for the project</div>
+    </div>
+
+
+
+  </div>
 }
