remove jwt and add hidden to images

--- a/app/views/email/emailWrapper.scala.html
+++ b/app/views/email/emailWrapper.scala.html
@@ -7,56 +7,12 @@
         <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
     </head>
     <body>
-        <style>
-            body{
-                padding: 24px;
-
-                display: flex;
-                justify-content: center;
-                font-family: Arial
-            }
-
-            .content{
-                padding: 24px;
-                background-color: #2b2b2b;
-                color: #cfcfd0 ;
-            }
-
-            .row{
-                display: flex;
-                flex-direction: row;
-            }
-
-            .center{
-                justify-content: center;
-            }
-
-            .code{
-                padding: 8px;
-                background-color: #1c1c1c;
-                border: solid 1px #bababa;
-                border-radius: 2px;
-                font-size: 42px;
-                color: #b81414;
-                flex-grow: 1;
-                text-align: center;
-                font-weight: bold;
-                font-family: helvetica
-            }
-
-            .link {
-                color: #a10000;
-                &:hover{
-                    color: #ef0000;
-                    text-decoration: none;
-                }
-            }
-
-
-
-
-        </style>
-        <div class="content">
+        <div style="max-width: 400px;
+            margin:24px;
+            padding: 24px;
+            background-color: #2b2b2b;
+            color: #cfcfd0 ;
+            font-family: Arial;">
             <p>Hello <b>@{user.user.displayUser.username}</b>
             @content
         </div>
